parse/src/ast/snapshots/parse__ast__condition__tests__logical.snap
---
source: parse/src/ast/condition.rs
expression: node
---
LOGICAL_CONDITION_NODE@0..21
  COMPARISON_CONDITION_NODE@0..8
    BINARY_COMPARISON_NODE@0..8
      QUESTION_PARAMETER_NODE@0..4
        IDENTIFIER@0..1 "Q"
        NUMERIC_LITERAL_NODE@1..4
          NUMERIC@1..4 "123"
      WHITESPACE@4..5 " "
      EQUAL_OPERATOR_NODE@5..6
        EQUAL@5..6 "="
      WHITESPACE@6..7 " "
      NUMERIC_LITERAL_NODE@7..8
        NUMERIC@7..8 "1"
  WHITESPACE@8..9 " "
  AND_OPERATOR_NODE@9..12
    IDENTIFIER@9..12 "and"
  WHITESPACE@12..13 " "
  COMPARISON_CONDITION_NODE@13..21
    BINARY_COMPARISON_NODE@13..21
      QUESTION_PARAMETER_NODE@13..17
        IDENTIFIER@13..14 "Q"
        NUMERIC_LITERAL_NODE@14..17
          NUMERIC@14..17 "456"
      WHITESPACE@17..18 " "
      EQUAL_OPERATOR_NODE@18..19
        EQUAL@18..19 "="
      WHITESPACE@19..20 " "
      NUMERIC_LITERAL_NODE@20..21
        NUMERIC@20..21 "2"

